Fix button overlap

--- a/src/App.scss
+++ b/src/App.scss
@@ -229,6 +229,7 @@ button,
     position: absolute;
     grid-template-columns: repeat(4, minmax(0, 1fr));
     grid-auto-rows: auto auto auto 1fr;
+    z-index: 2;
     @include mobile-landscape {
       width: 30%;
     }
@@ -529,7 +530,7 @@ button,
 }
 [class*="subtitle--"] {
   position: absolute;
-  bottom: 20%;
+  bottom: 10%;
   left: 50%;
   transform: translateX(-50%);
   font-size: 3rem;
